--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Re-try implementations about some common, awesome and useful APIs, Algorithms and Wheels with modern JavaScript.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "lint": "eslint src/",
     "test": "mocha ./src/**/*.spec.js"
@@ -28,12 +29,17 @@
   },
   "homepage": "https://github.com/Flcwl/JavaScript-ReTry#readme",
   "devDependencies": {
-    "mocha": "^5.2.0",
+    "@babel/core": "^7.17.9",
     "eslint": "^5.6.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "mocha": "^5.2.0"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "typescript": "^4.6.3"
   }
 }
